# spectoncr

./: .gitignore  CLAUDE-FIX-PULLTHROUGH-BLOBS.md  CLAUDE-FIX-PUSH.md  CONTRIBUTING.md  Cargo.toml  DOCKERHUB.md  Dockerfile  Dockerfile.scratch  README.md  RESUME.md  SECURITY.md  docker-compose.nightly.yml  docker-compose.observability.runner.yml  docker-compose.observability.yml  docker-compose.yml  index.yaml
.github/workflows/: ci.yml  deploy-k3s.yml  deploy-mirror-native.yml  deploy-nightly-cve-scan.yml  deploy-observability.yml  docker-hub-publish.yml  docker-publish.yml  example-spectoncr-usage.yml  helm-release.yml  nebulacr-showcase.yml  nightly-cve-scan-all.yml  nightly-cve-scan.yml  nightly-registry-test.yml  publish-landing.yml  spectoncr-showcase.yml
config/: spectoncr.example.toml
contrib/opsapi/: README.md
contrib/opsapi/migrations/: container-registry-metadata.lua
contrib/opsapi/routes/: registry-events.lua  registry-metadata.lua
crates/nebula-attest/: Cargo.toml
crates/nebula-attest/src/: dsse.rs  lib.rs  slsa.rs  store.rs
crates/nebula-auth/src/: main.rs
crates/nebula-common/src/: auth.rs
crates/nebula-cost/: Cargo.toml
crates/nebula-cost/src/: lib.rs
crates/nebula-db/migrations/: 0004_online_gc.sql  0008_ephemeral.sql  0012_usage.sql  0014_pilot.sql
crates/nebula-ephemeral/: Cargo.toml
crates/nebula-ephemeral/src/: lib.rs  ttl.rs
crates/nebula-gc/: Cargo.toml
crates/nebula-gc/src/: lib.rs  manifest.rs  reaper.rs  refcount.rs
crates/nebula-import/src/: acr.rs  destination.rs  harbor.rs  lib.rs  nexus.rs  runner.rs
crates/nebula-lazy/: Cargo.toml
crates/nebula-lazy/src/: jobs.rs  lib.rs  worker.rs
crates/nebula-peer/src/: lib.rs  tcp_mesh.rs
crates/nebula-pilot/: Cargo.toml
crates/nebula-pilot/src/: chat.rs  lib.rs  registry.rs  tool.rs
crates/nebula-pilot/src/llm/: anthropic.rs  ollama.rs  openai.rs
crates/nebula-pilot/src/tools/: ping.rs
crates/nebula-rebuild/: Cargo.toml
crates/nebula-rebuild/src/: lib.rs  lineage.rs
crates/nebula-registry/: Cargo.toml
crates/nebula-registry/src/: main.rs
crates/specton-ai/: Cargo.toml
crates/specton-ai/src/: lib.rs  ollama.rs
crates/specton-artifact-types/: Cargo.toml
crates/specton-attest/: Cargo.toml
crates/specton-attest/src/: dsse.rs  lib.rs  slsa.rs  store.rs  verifier.rs
crates/specton-auth/: Cargo.toml
crates/specton-auth/src/: dev_key.pem  dev_key.pub.pem  main.rs
crates/specton-common/: Cargo.toml
crates/specton-controller/: Cargo.toml
crates/specton-controller/src/: main.rs
crates/specton-cost/: Cargo.toml
crates/specton-db/: Cargo.toml
crates/specton-db/migrations/: 0001_init.sql  0002_vulndb_ingest.sql  0003_scan_jobs.sql  0005_lazy_pull.sql  0006_peer_mesh.sql  0007_import.sql  0008_ephemeral.sql  0009_findings.sql  0010_attestations.sql  0011_artifact_types.sql  0012_usage.sql  0013_auto_rebuild.sql  0014_pilot.sql  0015_online_gc_paths.sql  0016_lazy_jobs_path.sql
crates/specton-db/src/: lib.rs  models.rs
crates/specton-ephemeral/: Cargo.toml
crates/specton-gc/: Cargo.toml
crates/specton-import/: Cargo.toml
crates/specton-lazy/: Cargo.toml
crates/specton-mirror/: Cargo.toml
crates/specton-peer/: Cargo.toml
crates/specton-peer/src/: lib.rs  local.rs  mesh.rs  registry_store.rs
crates/specton-pilot/: Cargo.toml
crates/specton-rebuild/: Cargo.toml
crates/specton-registry/: Cargo.toml
crates/specton-registry/src/: audit.rs  dashboard.rs  main.rs  webhook.rs
crates/specton-replication/: Cargo.toml
crates/specton-replication/src/: event.rs  failover.rs  lib.rs  region.rs  replicator.rs
crates/specton-resilience/: Cargo.toml
crates/specton-resilience/src/: circuit_breaker.rs  lib.rs  resilient_store.rs  retry.rs
crates/specton-scanner/: Cargo.toml
crates/specton-scanner/src/: api.rs  authkey.rs  config.rs  cve_search.rs  dockerfile.rs  export.rs  github_crawl.rs  github_pr.rs  image.rs  lib.rs  model.rs  notify.rs  policy.rs  queue.rs  ratelimit.rs  recommend.rs  report.rs  runtime.rs  sbom_export.rs  settings.rs  store.rs  suppress.rs  vex.rs  worker.rs  ws.rs
crates/specton-scanner/src/detector/: license.rs  malware.rs  mod.rs  store.rs
crates/specton-scanner/src/matcher/: apk.rs  deb.rs  go.rs  mod.rs  pep440.rs  rpm.rs  semver_ecosystem.rs
crates/specton-scanner/src/sbom/: apk.rs  binary.rs  cargo.rs  dpkg.rs  go.rs  mod.rs  npm.rs  pypi.rs  rpm.rs
crates/specton-scanner/src/vulndb/: mod.rs  osv.rs  severity.rs  specton.rs
crates/specton-scanner/src/vulndb/ingest/: ghsa.rs  mod.rs  normalise.rs  nvd.rs  osv.rs  writer.rs
dashboard/: README.md  index.html  package.json
dashboard/src/: App.tsx
deploy/ansible/: deploy-mirror.yml  inventory.yml
docs/: architecture.md  authentication.md  ci-cd.md  deployment.md  grafana-dashboards.md  multi-tenancy.md  observability.md  online-gc.md  security-audit-checklist.md  showcase.md  system-architecture-diagrams.md  threat-model.md  troubleshooting.md
docs/architecture/: README.md
docs/design/: 001-image-signing.md  002-admission-gate.md  003-tag-immutability-quarantine.md  004-gc-retention.md  005-audit-log.md  006-promotion-api.md  007-web-ui-parity.md  008-cmk-encryption-at-rest.md  009-online-gc.md  010-lazy-pull.md  011-p2p-pull.md  012-migration-importer.md  013-ephemeral-repos.md  014-extended-scanning.md  015-slsa-provenance.md  016-typed-artifacts.md  017-cost-telemetry.md  018-auto-rebuild.md  019-ai-agent.md  PROMPT.md  README.md
docs/examples/: gate-on-scan.sh
docs/landing/: api.html  index.html
examples/argocd/: image-updater.yml
examples/github-actions/: push-image.yml  reusable-push.yml
examples/gitlab-ci/: push-image.yml
examples/jenkins/: Jenkinsfile
examples/kubernetes/: ha-production.yaml  minimal.yaml
examples/scripts/: spectoncr-login.sh
examples/showcase/: Dockerfile  app.py  requirements.txt
examples/tekton/: push-task.yml
scripts/: k8s-nightly-scan.sh  nightly-report-pdf.py  nightly-scan-all.sh  nightly-scan.sh  slack-upload-pdf.py  sync-gh-secrets.sh
tests/e2e/: online_gc_e2e.sh
(+119 files in other folders)
