[workspace]
members = [
    "crates/specton-common",
    "crates/specton-auth",
    "crates/specton-registry",
    "crates/specton-controller",
    "crates/specton-resilience",
    "crates/specton-mirror",
    "crates/specton-replication",
    "crates/specton-db",
    "crates/specton-ai",
    "crates/specton-scanner",
    "crates/specton-gc",
    "crates/specton-lazy",
    "crates/specton-peer",
    "crates/specton-import",
    "crates/specton-ephemeral",
    "crates/specton-attest",
    "crates/specton-artifact-types",
    "crates/specton-cost",
    "crates/specton-rebuild",
    "crates/specton-pilot",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Specton <hello@specton.io>"]
license = "Apache-2.0"
homepage = "https://specton.io"
repository = "https://github.com/spectonio/spectoncr"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit", "request-id"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Auth / JWT / OIDC
jsonwebtoken = "9"
openidconnect = "4"
oauth2 = "5"

# Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"

# Storage
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
bytes = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Config
config = "0.14"
dotenvy = "0.15"

# Async utilities
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
governor = "0.8"

# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = "0.8"

# Internal crates
specton-common = { path = "crates/specton-common" }
specton-auth = { path = "crates/specton-auth" }
specton-registry = { path = "crates/specton-registry" }
specton-controller = { path = "crates/specton-controller" }
specton-resilience = { path = "crates/specton-resilience" }
specton-mirror = { path = "crates/specton-mirror" }
specton-replication = { path = "crates/specton-replication" }
specton-db = { path = "crates/specton-db" }
specton-ai = { path = "crates/specton-ai" }
specton-scanner = { path = "crates/specton-scanner" }
specton-gc = { path = "crates/specton-gc" }
specton-lazy = { path = "crates/specton-lazy" }
specton-peer = { path = "crates/specton-peer" }
specton-import = { path = "crates/specton-import" }
specton-ephemeral = { path = "crates/specton-ephemeral" }
specton-attest = { path = "crates/specton-attest" }
specton-artifact-types = { path = "crates/specton-artifact-types" }
specton-cost = { path = "crates/specton-cost" }
specton-rebuild = { path = "crates/specton-rebuild" }
specton-pilot = { path = "crates/specton-pilot" }

# Scanner deps
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"
tar = "0.4"
flate2 = "1"
zstd = "0.13"
zip = "2"
tempfile = "3"
oci-spec = "0.7"
purl = "0.1"
semver = "1"
regex = "1"
async-stream = "0.3"

# Async traits
async-trait = "0.1"

# System metrics
sysinfo = "0.33"
