[package]
name = "nebula-gc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nebula-db.workspace = true
nebula-common.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
object_store.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
