[package]
name = "nebula-lazy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nebula-db.workspace = true
nebula-common.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
sha2.workspace = true
hex.workspace = true
flate2.workspace = true
tar.workspace = true
object_store.workspace = true
