[package]
name = "nebula-registry"
version.workspace = true
edition.workspace = true

[dependencies]
nebula-common = { workspace = true }
nebula-resilience = { workspace = true }
nebula-mirror = { workspace = true }
nebula-replication = { workspace = true }
nebula-scanner = { workspace = true }
nebula-gc = { workspace = true }
nebula-cost = { workspace = true }
nebula-ephemeral = { workspace = true }
nebula-rebuild = { workspace = true }
nebula-lazy = { workspace = true }
nebula-artifact-types = { workspace = true }
nebula-attest = { workspace = true }
async-trait = { workspace = true }
nebula-db = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
futures = { workspace = true }
sysinfo = { workspace = true }
