[package]
name = "specton-attest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
specton-db.workspace = true
specton-common.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
ed25519-dalek = { version = "2", features = ["pem"] }
rsa = { version = "0.9", features = ["sha2"] }
spki = "0.7"
