[package]
name = "specton-auth"
version.workspace = true
edition.workspace = true

[dependencies]
specton-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jsonwebtoken = { workspace = true }
openidconnect = { workspace = true }
oauth2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
