[package]
name = "specton-controller"
version.workspace = true
edition.workspace = true

[[bin]]
name = "specton-controller"
path = "src/main.rs"

[dependencies]
specton-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
