[package]
name = "specton-peer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
specton-db.workspace = true
specton-common.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
futures.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
