[package]
name = "specton-registry"
version.workspace = true
edition.workspace = true

[dependencies]
specton-common = { workspace = true }
specton-resilience = { workspace = true }
specton-mirror = { workspace = true }
specton-replication = { workspace = true }
specton-scanner = { workspace = true }
specton-gc = { workspace = true }
specton-cost = { workspace = true }
specton-ephemeral = { workspace = true }
specton-rebuild = { workspace = true }
specton-lazy = { workspace = true }
specton-artifact-types = { workspace = true }
specton-attest = { workspace = true }
async-trait = { workspace = true }
specton-db = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
futures = { workspace = true }
sysinfo = { workspace = true }
